# bar-with-foo-as-submodule

./: .clang-format  .gitmodules  CMakeLists.txt
cmake/include/: install.cmake  toolchain.cmake  version.cmake
cmake/toolchain/: README.json  x64-linux-clang-libcxx-6.0.cmake  x64-linux-clang-libcxx.cmake  x64-linux-gcc-libstdcxx.cmake
doc/tex/: README.md  book.tex  config.tex  library.bib  makefile  titlepage.tex
doc/tex/img/: makefile
doc/tex/pkg/: ambhora.sty  config-lua.tex  config-pdf.tex  jaytodo.sty  ramtek.sty  silari.sty  tadoba-lua.sty  tadoba-pdf.sty  tadoba.sty  umred.sty
src/: CMakeLists.txt
test/: CMakeLists.txt
utils/clang-tools/: format.sh
utils/devconfig/jayeshbadwaik/: gitignore  setup.sh  vimrc  ycm_extra_conf.py
utils/git/stats/: generate-gitstats.sh
